--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV = development
 PORT = 5000
-MONGO_URI = mongodb://127.0.0.1:27017/mernapp
+MONGO_URI = mongodb://admin:password@127.0.0.1:27017/mernapp
