--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/tiukenywil11/mern-stack-demo#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "i": "^0.3.7",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7"
   },
   "devDependencies": {
