--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -6,13 +6,15 @@ services:
   mern-stack-demo-mongodb:
     image: mongo
     volumes:
-    - "../mongodb-data:/data/db"
+      - "../mongodb-data:/data/db"
+      - "./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro"
     ports:
     - 27017:27017
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: mernapp
 
 # docker-compose up -d 
 
